# aisix

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  config.example.yaml  config.managed.yaml  rust-toolchain.toml
.github/: release-notes-header.md
.github/workflows/: ci.yml  docker-image.yml  objstore-cloud-identity.yml  release-draft.yml
crates/aisix-admin/: Cargo.toml
crates/aisix-admin/src/: auth.rs  cache_policies_handlers.rs  error.rs  etcd_store.rs  file_store.rs  guardrails_handlers.rs  health_handler.rs  lib.rs  mcp_servers_handlers.rs  models_status_handler.rs  observability_exporters_handlers.rs  openapi.rs  provider_keys_handlers.rs  state.rs  store.rs
crates/aisix-admin/tests/: etcd_integration.rs
crates/aisix-cache/: Cargo.toml
crates/aisix-cache/src/: cache.rs  key.rs  lib.rs  memory.rs  redis.rs
crates/aisix-cache/tests/: redis_integration.rs
crates/aisix-core/: Cargo.toml
crates/aisix-core/src/: config.rs  config_status.rs  error.rs  lib.rs  resource.rs  snapshot.rs
crates/aisix-core/src/filesource/: desugar.rs  mod.rs  status.rs  tests.rs  yaml.rs
crates/aisix-core/src/models/: apikey.rs  cache_policy.rs  embedding.rs  ensemble.rs  guardrail.rs  mcp_server.rs  mod.rs  model.rs  observability_exporter.rs  provider_key.rs  rate_limit.rs  rate_limit_policy.rs  routing.rs  schema.rs  semantic.rs  snapshot.rs
crates/aisix-core/tests/: model_schema_characterization.rs
crates/aisix-etcd/: Cargo.toml
crates/aisix-etcd/src/: key.rs  lib.rs  loader.rs  snapshot_cache.rs  supervisor.rs
crates/aisix-gateway/: Cargo.toml
crates/aisix-gateway/src/: bridge.rs  chat.rs  hub.rs  lib.rs  sse.rs
crates/aisix-guardrails/: Cargo.toml
crates/aisix-guardrails/src/: aliyun.rs  aliyun_ai_guardrail.rs  bedrock.rs  build.rs  chain.rs  index.rs  length.rs  lib.rs  prompt_shield.rs  text_moderation.rs
crates/aisix-mcp/: Cargo.toml
crates/aisix-mcp/src/: gateway.rs  lib.rs
crates/aisix-mcp/tests/: gateway_aggregation.rs
crates/aisix-obs/: Cargo.toml
crates/aisix-obs/src/: access_log.rs  langfuse.rs  lib.rs  metrics.rs  otlp_http_sink.rs  usage.rs
crates/aisix-obs/src/sink/: capabilities.rs  datadog.rs  manager.rs  mod.rs  object_store.rs  pipeline.rs  record.rs  sls.rs
crates/aisix-obs/tests/: object-store-emulators.compose.yml  object-store-emulators.env
crates/aisix-provider-anthropic/: Cargo.toml
crates/aisix-provider-anthropic/src/: bridge.rs  lib.rs  wire.rs
crates/aisix-provider-azure-openai/: Cargo.toml
crates/aisix-provider-azure-openai/src/: aad_token_mint.rs  bridge.rs  lib.rs
crates/aisix-provider-bedrock/: Cargo.toml
crates/aisix-provider-bedrock/src/: bridge.rs  lib.rs
crates/aisix-provider-deepseek/: Cargo.toml
crates/aisix-provider-deepseek/src/: lib.rs
crates/aisix-provider-gemini/: Cargo.toml
crates/aisix-provider-gemini/src/: lib.rs
crates/aisix-provider-google/: Cargo.toml
crates/aisix-provider-google/src/: lib.rs
crates/aisix-provider-openai/: Cargo.toml
crates/aisix-provider-openai/src/: bridge.rs  lib.rs  overrides.rs  wire.rs
crates/aisix-provider-vertex/: Cargo.toml
crates/aisix-provider-vertex/src/: bridge.rs  lib.rs  token_mint.rs
crates/aisix-provider-vertex/test-fixtures/: test_sa_private.pem  test_sa_public.pem
crates/aisix-proxy/: AGENTS.md  Cargo.toml
crates/aisix-proxy/src/: attempt.rs  audio.rs  background.rs  budget.rs  chat.rs  client_ip.rs  completions.rs  cooldown.rs  count_tokens.rs  dispatch.rs  embeddings.rs  ensemble.rs  error.rs  error_translate.rs  health.rs  images.rs  jobs.rs  lib.rs  messages.rs  passthrough.rs  quota.rs  redact.rs  render.rs  rerank.rs  responses.rs  responses_bridge.rs  routing.rs  semantic.rs  state.rs  stream_timeout.rs  token_estimate.rs  usage_attr.rs
crates/aisix-ratelimit/: Cargo.toml
crates/aisix-ratelimit/src/: clock.rs  error.rs  lib.rs  limiter.rs  window.rs
crates/aisix-ratelimit/src/store/: redis.rs
crates/aisix-ratelimit/tests/: redis_integration.rs
crates/aisix-server/: Cargo.toml
crates/aisix-server/src/: cert_bundle.rs  heartbeat.rs  main.rs  register.rs  telemetry.rs
crates/aisix-server/src/export/: document.rs  document_tests.rs  mod.rs  secrets.rs  yaml_emit.rs
docker/: entrypoint.sh
docs/: api-admin.md  api-proxy.md  architecture.md  index.md  roadmap.md  semantic-routing.md  testing.md
docs/architecture/: protocol-translation.md  two-phase-rate-limit.md
docs/cloud/: cloud-playground.md  cloud-vs-self-hosted.md  gateway-certificates-and-managed-dp.md  offline-resilience.md  organizations-and-environments.md  overview.md  provider-key-rotation.md  resource-projection.md  usage-events-and-billing.md
docs/configuration/: admin-api.md  api-keys.md  bootstrap-config.md  budgets.md  caching.md  configuration-propagation.md  guardrails.md  models.md  observability-exporters.md  provider-keys.md  rate-limits.md  routing-and-failover.md
docs/integration/: anthropic-messages.md  audio.md  embeddings.md  errors-and-retries.md  images.md  openai-compatible-api.md  passthrough.md  rerank.md  responses.md  streaming.md  tool-calling.md  upstream-openai-compat.md
docs/operations/: health-checks.md  metrics-and-logs.md  network-and-security.md  production-deployment.md  testing-and-verification.md  tls-and-mtls.md  troubleshooting.md  upgrades-and-compatibility.md
docs/overview/: core-concepts.md  deployment-modes.md  feature-matrix.md  what-is-aisix-ai-gateway.md
docs/quickstart/: aisix-cloud-managed-dp.md  anthropic-sdk.md  first-model-first-key-first-request.md  openai-sdk.md  self-hosted.md
docs/reference/: admin-api-reference.md  glossary.md  headers-and-error-codes.md  provider-compatibility.md  proxy-api-reference.md  resource-schemas.md  runtime-config-schema.md
docs/tutorials/: add-keyword-guardrails.md  build-a-virtual-model-with-failover.md  enable-response-caching.md  openai-client-to-anthropic-upstream.md
schemas/: README.md
schemas/resources/: model.schema.json  (+11 more)
ui/: index.html  package.json  tsconfig.json  vite.config.ts
(+99 files in other folders)
