[package]
name = "aisix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: core types (Config, ResourceEntry, Snapshot, errors)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
jsonschema.workspace = true
schemars = { workspace = true, features = ["chrono"] }
# ApiKey::expires_at parses RFC 3339 timestamps for key-expiry
# enforcement in the proxy auth path (#933).
chrono.workspace = true
once_cell.workspace = true
# ApiKey::hash_bearer (prd-09a §9A.7B.4) is the canonical SHA-256 the
# proxy uses to compare an incoming Authorization: Bearer <plaintext>
# against the snapshot's `key_hash` column.
sha2.workspace = true
hex.workspace = true
# Trusted-proxy CIDR parsing/validation for proxy.real_ip (#492)
ipnet.workspace = true
# filesource: resources.yaml parsing + deterministic UUIDv5 resource ids
yaml-rust2.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
