[package]
name = "aisix-etcd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: etcd config provider with watch supervisor"

[dependencies]
aisix-core = { path = "../aisix-core" }
etcd-client.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
