[package]
name = "aisix-guardrails"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: pluggable guardrails (pre_call / during_call / post_call)"

[dependencies]
aisix-core = { path = "../aisix-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
