[package]
name = "aisix-obs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: observability (tracing, metrics, access log, OTLP export)"

[dependencies]
aisix-core = { path = "../aisix-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
base64.workspace = true
parking_lot.workspace = true
# Aliyun SLS sink — official protobuf + signature sub-crates (pure-Rust),
# lz4 block compression, and `http` types for sign_v1. Transport is reqwest
# (rustls), so no native-tls / OpenSSL is pulled in.
http.workspace = true
aliyun-log-sdk-protobuf.workspace = true
aliyun-log-sdk-sign.workspace = true
lz4_flex.workspace = true

[dev-dependencies]
wiremock.workspace = true
