[package]
name = "aisix-ratelimit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: fixed-window rate limiter (commit/read-only modes) + semaphore-based concurrency"

[dependencies]
aisix-core = { path = "../aisix-core" }
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
rstest.workspace = true
